# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  project-structure.txt  pyproject.toml  x_pycache.py
postgres_data/: postmaster.pid
postgres_data/base/13780/: pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  16385  16386  16391  16392  16394  16395  16396  16397  16402  16403  16410  16411  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
postgres_data/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
postgres_data/pg_xact/: 0000
scripts/: test_ep.py
src/: main.py  my_file.py  pytest.ini  utils.py
src/api/: auth.py
src/authentication/: auth.py  schemas.py
src/database/: connect.py  models.py
src/models/: database_models.py  pydantic_models.py
src/repository/: contacts.py  users.py
src/routers/: contacts.py  users.py  utils.py
src/schemas/: contact.py  schema.py  schemas.py
src/services/: auth.py  base.py  cloudinary_config.py  email.py  get_upload.py  redis.py
src/services/templates/: email_template.html
src/settings/: auth.py  base.py  cloudinary_config.py  config.ini
src/tests/: response_contacts.json  test_db_connection.py
