[tool.poetry]
name = "pythonweb-hw10"
version = "0.2.0"
description = "REST API for managing contacts"
authors = ["Dmytro Zhuk <dm.zhuk@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.5.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.0"
pydantic = { version = "^2.0.0", extras = ["email"] }
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"
python-dateutil = "^2.9.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
aiosmtplib = "^3.0.1"
cloudinary = "^1.41.0"
asyncpg = "^0.30.0"
libgravatar = "^1.0.4"
redis = "^6.2.0"
redis-lru = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"